timeout_promise/service_desk/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: service-desk
  labels:
    pass.subject: service-desk
spec:
  restartPolicy: Always

  containers:
    - name: subject-behavior
      image: service_desk:latest
      imagePullPolicy: Never
      command: ["python", "/app/behavior.py"]

    - name: input-pool
      image: input_pool:latest
      imagePullPolicy: Never
      command: ["input-pool"]

      ports:
        - containerPort: 8081
        - containerPort: 8080
