timeout_promise/service_desk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-desk
spec:
  selector:
    pass.subject: service-desk
  ports:
    - name: input-pool
      port: 8080
      targetPort: 8080
