timeout_promise/service_desk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-desk-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /messages
spec:
  rules:
    - http:
        paths:
          - path: /service-desk
            pathType: Prefix
            backend:
              service:
                name: service-desk
                port:
                  number: 8080
